--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-pandas
-numpy
-seaborn
-matplotlib
-scikit-learn
-catboost
-xgboost
-dill
+pandas == 2.0.2
+numpy == 1.24.3
+matplotlib == 3.7.1
+seaborn == 0.12.2
+scikit-learn == 1.2.2
+catboost == 1.2
+xgboost == 1.7.5
+dill == 0.3.6
 
 click==8.1.3
-Flask==2.2.2
+Flask==2.3.2
 gunicorn==20.1.0
-importlib-metadata==5.0.0
+importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-Werkzeug==2.2.2
+Werkzeug==2.3.3
 
 -e .
